# tundra

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: p1-plan.md  p2-plan.md  settings.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
crates/tundra-agent-bin/: Cargo.toml  README.md
crates/tundra-agent-bin/src/: main.rs
crates/tundra-agent-logs/: Cargo.toml  README.md
crates/tundra-agent-logs/src/: lib.rs  shipper.rs
crates/tundra-agent-metrics/: Cargo.toml  README.md
crates/tundra-agent-metrics/src/: collector.rs  lib.rs
crates/tundra-agent-providers/: Cargo.toml  README.md
crates/tundra-agent-providers/src/: deploy.rs  dovecot.rs  lib.rs  mariadb.rs  mysql.rs  nginx.rs  php_fpm.rs  pkg.rs  postfix.rs  postgres.rs  powerdns.rs  roundcube.rs  rspamd.rs  runtimes.rs  systemd.rs  systemd_templates.rs  unbound.rs  valkey.rs
crates/tundra-agent-reconciler/: Cargo.toml  README.md
crates/tundra-agent-reconciler/src/: error.rs  lib.rs  provider.rs  reconciler.rs  tundra_client.rs
crates/tundra-cli/: Cargo.toml  README.md
crates/tundra-cli/src/: acceptance.rs  agent_cert.rs  main.rs  master_key.rs
crates/tundra-cli/src/mcp/: mod.rs
crates/tundra-plugin-sdk/: Cargo.toml
crates/tundra-plugin-sdk/src/: lib.rs
crates/tundra-proto/: Cargo.toml  build.rs
crates/tundra-proto/src/: lib.rs
crates/tundra-test-harness/: Cargo.toml  README.md
crates/tundra-test-harness/src/: lib.rs
crates/tundrad-acme/: Cargo.toml  README.md
crates/tundrad-acme/src/: lib.rs
crates/tundrad-api/: Cargo.toml  README.md
crates/tundrad-api/fuzz/: Cargo.toml
crates/tundrad-api/fuzz/fuzz_targets/: fuzz_audit_canonicaliser.rs
crates/tundrad-api/src/: agent_auth.rs  audit_redact.rs  error.rs  extractors.rs  lib.rs  serde_util.rs  ssh_installer.rs  templates.rs
crates/tundrad-api/src/middleware/: csrf.rs  mod.rs  security_headers.rs  step_up.rs
crates/tundrad-api/src/routes/: agent.rs  alert_rules.rs  audit_log.rs  auth.rs  backups.rs  daemons.rs  databases.rs  domains.rs  files.rs  health.rs  mail.rs  mod.rs  operators.rs  plugins.rs  scheduled_tasks.rs  servers.rs  settings.rs  setup.rs  site_moves.rs  sites.rs  ssl.rs  system.rs  templates.rs  tokens.rs  wordpress.rs  wp_actions.rs  wp_clone.rs  wp_provisioner.rs  ws.rs
crates/tundrad-api/tests/: contract.rs
crates/tundrad-auth/: Cargo.toml  README.md
crates/tundrad-auth/src/: authz.rs  error.rs  hibp.rs  lib.rs  session.rs  token.rs  totp.rs
crates/tundrad-auth/tests/: auth_flow.rs  mfa_flow.rs
crates/tundrad-backup/: Cargo.toml
crates/tundrad-backup/src/: lib.rs  restic.rs  retention.rs  target.rs
crates/tundrad-bin/: Cargo.toml  README.md
crates/tundrad-bin/src/: main.rs
crates/tundrad-bin/src/seeders/: alert_rules.rs  dns_records.rs  domains.rs  mail_domains.rs  mod.rs  operators.rs  plugins.rs  servers.rs  sites.rs  wordpress.rs
crates/tundrad-config/: Cargo.toml  README.md
crates/tundrad-config/src/: lib.rs
crates/tundrad-crypto/: Cargo.toml  README.md
crates/tundrad-crypto/src/: encrypted_field.rs  error.rs  key_ring.rs  lib.rs  master_key.rs  password.rs
crates/tundrad-domain/: Cargo.toml  README.md
crates/tundrad-domain/benches/: domain_bench.rs
crates/tundrad-domain/src/: audit_log.rs  backup.rs  daemon.rs  database.rs  domain.rs  lib.rs  mail.rs  metrics.rs  operator.rs  scheduled_task.rs  server.rs  server_metrics.rs  session.rs  site.rs  site_move.rs
crates/tundrad-events/: Cargo.toml  README.md
crates/tundrad-events/src/: bus.rs  lib.rs  types.rs
crates/tundrad-jobs/: Cargo.toml  README.md
crates/tundrad-jobs/src/: lib.rs  queue.rs  types.rs
crates/tundrad-pki/: Cargo.toml
crates/tundrad-pki/src/: ca.rs  error.rs  lib.rs  token.rs
crates/tundrad-plugin-discord/: Cargo.toml
crates/tundrad-plugin-discord/src/: lib.rs
crates/tundrad-plugin-host/: Cargo.toml  README.md
crates/tundrad-plugin-host/fuzz/: Cargo.toml
crates/tundrad-plugin-host/fuzz/fuzz_targets/: fuzz_manifest_parser.rs
crates/tundrad-plugin-host/src/: capability.rs  engine.rs  host_impl.rs  instance.rs  lib.rs  manifest.rs  registry.rs  tests.rs
crates/tundrad-plugin-namecheap/: Cargo.toml
crates/tundrad-plugin-namecheap/src/: api.rs  domain_ops.rs  lib.rs
crates/tundrad-plugin-namecheap/tests/: plugin_tests.rs
crates/tundrad-plugin-slack/: Cargo.toml
crates/tundrad-plugin-slack/src/: lib.rs
crates/tundrad-repo/: Cargo.toml  README.md
crates/tundrad-repo/src/: alert_rules.rs  audit_log.rs  backup.rs  certificate.rs  daemon.rs  database.rs  domain.rs  error.rs  lib.rs  mail.rs  metrics.rs  operator.rs  passkey.rs  scheduled_task.rs  server.rs  server_metrics.rs  session.rs  site.rs  site_move.rs
crates/tundrad-repo/tests/: audit_chain.rs
crates/tundrad-self-backup/: Cargo.toml
crates/tundrad-self-backup/src/: backup.rs  restore.rs
docker/: Dockerfile.agent  Dockerfile.installer-test  Dockerfile.tundrad  docker-compose.installer-test.yml
docs/: README.md  UPGRADING.md  getting-started.md  security-redteam-v1.md  security.md  slsa.md
docs-site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
guidelines/: README.md  api-reference.md  developer-guide.md  getting-started.md  local-development.md  mcp-guide.md  mcp-integration.md  plugin-development.md
installer/: install.sh  test.sh
migrations/: 20260503000000_bootstrap_extensions.sql  20260503000001_identity_and_access.sql  20260503000002_internal_tables.sql  20260503000003_seed_system_roles.sql  20260503000020_sites.sql  20260503000030_certificates.sql  20260503000040_job_queue.sql  20260503000050_databases.sql  20260503000060_backups.sql  20260503000070_domains.sql  20260503000080_mail.sql  20260503000085_applications_bluegreen.sql  20260503000090_daemons.sql  20260503000095_scheduled_tasks.sql  20260503000100_p6_multiserver.sql  20260504000105_p7_metrics_alerts.sql  20260504000110_p7_plugins.sql  20260504000115_p7_mcp.sql  (+19 more)
(+358 files in other folders)
