[package]
name = "tundra-agent-bin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "tundra-agent"
path = "src/main.rs"

[dependencies]
tundra-agent-providers  = { path = "../tundra-agent-providers" }
tundra-agent-reconciler = { path = "../tundra-agent-reconciler" }
tundra-agent-rpc        = { path = "../tundra-agent-rpc" }
tundra-agent-metrics    = { path = "../tundra-agent-metrics" }
tundra-agent-logs       = { path = "../tundra-agent-logs" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
