[package]
name = "tundra-agent-logs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundra_agent_logs"
path = "src/lib.rs"

[dependencies]
tundra-proto = { path = "../tundra-proto" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
