[package]
name = "tundra-test-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundra_test_harness"
path = "src/lib.rs"

[dependencies]
tundrad-crypto = { path = "../tundrad-crypto" }
tundrad-repo = { path = "../tundrad-repo" }
tundrad-domain = { path = "../tundrad-domain" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true

# Testcontainers for real Postgres + Valkey
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
