[package]
name = "tundrad-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_api"
path = "src/lib.rs"

[dependencies]
tundrad-auth = { path = "../tundrad-auth" }
tundrad-backup = { path = "../tundrad-backup" }
tundrad-pki  = { path = "../tundrad-pki" }
tundrad-crypto = { path = "../tundrad-crypto" }
tundrad-domain = { path = "../tundrad-domain" }
tundrad-repo = { path = "../tundrad-repo" }
tundrad-events = { path = "../tundrad-events" }
async-trait.workspace = true
axum.workspace = true
fred.workspace = true
serde.workspace = true
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
