[package]
name = "tundrad-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_auth"
path = "src/lib.rs"

[dependencies]
tundrad-crypto = { path = "../tundrad-crypto" }
tundrad-domain = { path = "../tundrad-domain" }
tundrad-repo = { path = "../tundrad-repo" }
async-trait.workspace = true
base64.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# TOTP — HMAC-SHA1 per RFC 6238 (not in workspace; SHA-1 is intentional for TOTP)
hmac = "0.12"
sha1 = "0.10"

[dev-dependencies]
tundra-test-harness = { path = "../tundra-test-harness" }
tokio = { workspace = true, features = ["test-util", "macros"] }
