[package]
name = "tundrad-backup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_backup"
path = "src/lib.rs"

[dependencies]
tundrad-crypto = { path = "../tundrad-crypto" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true
