[package]
name = "tundrad-bin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "tundrad"
path = "src/main.rs"

[dependencies]
tundrad-api = { path = "../tundrad-api" }
tundrad-config = { path = "../tundrad-config" }
tundrad-crypto = { path = "../tundrad-crypto" }
tundrad-telemetry = { path = "../tundrad-telemetry" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
