[package]
name = "tundrad-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_config"
path = "src/lib.rs"

[dependencies]
figment.workspace = true
serde.workspace = true
thiserror.workspace = true
