[package]
name = "tundrad-pki"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_pki"
path = "src/lib.rs"

[dependencies]
base64.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
