[package]
name = "tundrad-plugin-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_plugin_host"
path = "src/lib.rs"

[dependencies]
tundra-plugin-sdk.workspace = true
wasmtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
async-trait.workspace = true
