[package]
name = "tundrad-plugin-namecheap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
tundra-plugin-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tundrad-plugin-github = { workspace = true }

[lib]
name = "tundrad_plugin_namecheap"
path = "src/lib.rs"
