[package]
name = "tundrad-repo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "tundrad_repo"
path = "src/lib.rs"

[dependencies]
tundrad-crypto = { path = "../tundrad-crypto" }
tundrad-domain = { path = "../tundrad-domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
