[package]
name = "tundrad-plugin-host-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tundrad-plugin-host = { path = ".." }

[[bin]]
name = "fuzz_manifest_parser"
path = "fuzz_targets/fuzz_manifest_parser.rs"
test = false
doc = false
